--- a/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
+++ b/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
@@ -350,7 +350,26 @@
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Lf-df-bW9" customClass="GameplayAreaView" customModule="PeggleClone" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="810" height="1060"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cannon" translatesAutoresizingMaskIntoConstraints="NO" id="FYU-kp-UxS">
+                                        <rect key="frame" x="285" y="8" width="240" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1I5-gh-Loo">
+                                        <rect key="frame" x="587" y="49" width="160" height="200"/>
+                                    </stackView>
+                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="1I5-gh-Loo" secondAttribute="bottom" constant="811" id="0OF-eG-Kto"/>
+                                    <constraint firstAttribute="trailing" secondItem="1I5-gh-Loo" secondAttribute="trailing" constant="63" id="mjv-n2-M8u"/>
+                                    <constraint firstItem="1I5-gh-Loo" firstAttribute="top" secondItem="0Lf-df-bW9" secondAttribute="top" constant="49" id="wqX-I8-cu7"/>
+                                    <constraint firstItem="1I5-gh-Loo" firstAttribute="leading" secondItem="0Lf-df-bW9" secondAttribute="leading" constant="587" id="xG7-hs-6Ux"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="ivCannon" destination="FYU-kp-UxS" id="hZr-bx-MFH"/>
+                                    <outlet property="svInfo" destination="1I5-gh-Loo" id="jco-4H-YX9"/>
+                                </connections>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="iMk-no-Bs4"/>
@@ -373,7 +392,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nux-d2-tgA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2041" y="976"/>
+            <point key="canvasLocation" x="2040.7407407407406" y="975.55555555555554"/>
         </scene>
         <!--StorageViewController-->
         <scene sceneID="t5t-mR-eeg">
@@ -503,6 +522,7 @@
     </scenes>
     <resources>
         <image name="background" width="4000" height="3000"/>
+        <image name="cannon" width="434" height="450"/>
         <image name="xmark.bin" catalog="system" width="128" height="93"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
