--- a/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
+++ b/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
@@ -352,17 +352,29 @@
                                 <rect key="frame" x="0.0" y="20" width="810" height="1060"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cannon" translatesAutoresizingMaskIntoConstraints="NO" id="FYU-kp-UxS">
-                                        <rect key="frame" x="285" y="8" width="240" height="128"/>
+                                        <rect key="frame" x="285" y="-450" width="240" height="450"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1I5-gh-Loo">
                                         <rect key="frame" x="587" y="49" width="160" height="200"/>
                                     </stackView>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ccK-nx-wb0">
+                                        <rect key="frame" x="40" y="100" width="730" height="860"/>
+                                        <connections>
+                                            <segue destination="tVH-c0-Tu7" kind="embed" identifier="segueGameEnd" id="fze-gg-aIr"/>
+                                        </connections>
+                                    </containerView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="1I5-gh-Loo" secondAttribute="bottom" constant="811" id="0OF-eG-Kto"/>
+                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="centerY" secondItem="0Lf-df-bW9" secondAttribute="centerY" id="7gE-bc-SO3"/>
+                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="centerX" secondItem="0Lf-df-bW9" secondAttribute="centerX" id="P6U-Q8-3NQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="ccK-nx-wb0" secondAttribute="trailing" constant="40" id="Xrr-aG-YYu"/>
+                                    <constraint firstAttribute="bottom" secondItem="ccK-nx-wb0" secondAttribute="bottom" constant="100" id="axw-4y-Yf8"/>
+                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="top" secondItem="0Lf-df-bW9" secondAttribute="top" constant="100" id="bJa-4c-20d"/>
                                     <constraint firstAttribute="trailing" secondItem="1I5-gh-Loo" secondAttribute="trailing" constant="63" id="mjv-n2-M8u"/>
+                                    <constraint firstItem="ccK-nx-wb0" firstAttribute="leading" secondItem="0Lf-df-bW9" secondAttribute="leading" constant="40" id="tX5-sw-d7P"/>
                                     <constraint firstItem="1I5-gh-Loo" firstAttribute="top" secondItem="0Lf-df-bW9" secondAttribute="top" constant="49" id="wqX-I8-cu7"/>
                                     <constraint firstItem="1I5-gh-Loo" firstAttribute="leading" secondItem="0Lf-df-bW9" secondAttribute="leading" constant="587" id="xG7-hs-6Ux"/>
                                 </constraints>
@@ -387,6 +399,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="PYr-EM-JJt"/>
                     <connections>
+                        <outlet property="cvGameEnd" destination="ccK-nx-wb0" id="JEw-iU-Dxx"/>
                         <outlet property="vGame" destination="0Lf-df-bW9" id="nag-Qo-3yz"/>
                     </connections>
                 </viewController>
@@ -518,6 +531,51 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AAx-yj-ono" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1284" y="-368"/>
+        </scene>
+        <!--Game End View Controller-->
+        <scene sceneID="NFZ-td-4UK">
+            <objects>
+                <viewController id="tVH-c0-Tu7" customClass="GameEndViewController" customModule="PeggleClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GDy-7f-j4B">
+                        <rect key="frame" x="0.0" y="0.0" width="730" height="860"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l19-ru-fNr">
+                                <rect key="frame" x="365" y="430" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hrD-yj-o3m">
+                                <rect key="frame" x="337" y="729" width="56" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Back"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dDC-zk-Gaf">
+                                <rect key="frame" x="329.5" y="668" width="71" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Restart"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="l19-ru-fNr" firstAttribute="centerY" secondItem="GDy-7f-j4B" secondAttribute="centerY" id="7F4-NG-cHh"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="hrD-yj-o3m" secondAttribute="bottom" constant="100" id="ATe-SC-w8k"/>
+                            <constraint firstItem="l19-ru-fNr" firstAttribute="centerX" secondItem="GDy-7f-j4B" secondAttribute="centerX" id="KHX-h5-d55"/>
+                            <constraint firstItem="hrD-yj-o3m" firstAttribute="centerX" secondItem="GDy-7f-j4B" secondAttribute="centerX" id="TGi-Og-TJu"/>
+                            <constraint firstItem="hrD-yj-o3m" firstAttribute="top" secondItem="dDC-zk-Gaf" secondAttribute="bottom" constant="30" id="gVr-b2-EUB"/>
+                            <constraint firstItem="dDC-zk-Gaf" firstAttribute="centerX" secondItem="GDy-7f-j4B" secondAttribute="centerX" id="o3b-J5-uP6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="btnBack" destination="hrD-yj-o3m" id="P9V-ai-ftd"/>
+                        <outlet property="btnRestart" destination="dDC-zk-Gaf" id="8W6-PO-XLx"/>
+                        <outlet property="lblGameStatus" destination="l19-ru-fNr" id="bMx-rr-nnh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bvQ-PV-idv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2788" y="976"/>
         </scene>
     </scenes>
     <resources>
