--- a/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
+++ b/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
@@ -184,30 +184,60 @@
                                     <rect key="frame" x="0.0" y="0.0" width="300" height="357"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q4v-hT-Wkn">
-                                            <rect key="frame" x="30" y="21" width="240" height="128"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q4v-hT-Wkn">
+                                            <rect key="frame" x="30" y="30" width="240" height="150"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="240" id="3Pt-k6-Ji0"/>
+                                                <constraint firstAttribute="height" constant="150" id="qeV-QD-o2Q"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXC-yj-rZX">
-                                            <rect key="frame" x="30" y="184" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXC-yj-rZX">
+                                            <rect key="frame" x="30" y="210" width="41.5" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GA-ld-XUF">
-                                            <rect key="frame" x="118" y="252" width="65" height="31"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niG-bf-4lQ">
+                                            <rect key="frame" x="30" y="251" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hO-KO-DJt">
+                                            <rect key="frame" x="30" y="292" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GA-ld-XUF">
+                                            <rect key="frame" x="117.5" y="296" width="65" height="31"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="filled" title="Select"/>
                                         </button>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="pXC-yj-rZX" firstAttribute="top" secondItem="Q4v-hT-Wkn" secondAttribute="bottom" constant="30" id="4XM-Ix-aPj"/>
+                                        <constraint firstItem="pXC-yj-rZX" firstAttribute="leading" secondItem="WTy-PT-MNX" secondAttribute="leading" constant="30" id="5ad-Ku-m37"/>
+                                        <constraint firstItem="niG-bf-4lQ" firstAttribute="top" secondItem="pXC-yj-rZX" secondAttribute="bottom" constant="20" id="6XC-Z1-fOY"/>
+                                        <constraint firstItem="Q4v-hT-Wkn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WTy-PT-MNX" secondAttribute="leading" constant="30" id="Cjv-KG-Yvv"/>
+                                        <constraint firstItem="Q4v-hT-Wkn" firstAttribute="centerX" secondItem="6GA-ld-XUF" secondAttribute="centerX" id="Deo-Dg-O9Y"/>
+                                        <constraint firstItem="0hO-KO-DJt" firstAttribute="top" secondItem="niG-bf-4lQ" secondAttribute="bottom" constant="20" id="Fn7-fT-FfJ"/>
+                                        <constraint firstItem="Q4v-hT-Wkn" firstAttribute="top" secondItem="WTy-PT-MNX" secondAttribute="top" constant="30" id="NSK-IB-Qw8"/>
+                                        <constraint firstItem="Q4v-hT-Wkn" firstAttribute="leading" secondItem="pXC-yj-rZX" secondAttribute="leading" id="VzB-Hq-Avt"/>
+                                        <constraint firstItem="niG-bf-4lQ" firstAttribute="leading" secondItem="WTy-PT-MNX" secondAttribute="leading" constant="30" id="edG-Ae-JRx"/>
+                                        <constraint firstItem="Q4v-hT-Wkn" firstAttribute="centerX" secondItem="WTy-PT-MNX" secondAttribute="centerX" id="i7i-mc-MFH"/>
+                                        <constraint firstItem="0hO-KO-DJt" firstAttribute="leading" secondItem="WTy-PT-MNX" secondAttribute="leading" constant="30" id="kjH-WF-Inn"/>
+                                        <constraint firstAttribute="bottom" secondItem="6GA-ld-XUF" secondAttribute="bottom" constant="30" id="xlm-sd-c33"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pXC-yj-rZX" secondAttribute="trailing" constant="30" id="zfS-cA-cFG"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="300" height="357"/>
                                 <connections>
                                     <outlet property="btnSelect" destination="6GA-ld-XUF" id="1Gj-kg-pQE"/>
                                     <outlet property="ivPicture" destination="Q4v-hT-Wkn" id="shn-rT-q7R"/>
-                                    <outlet property="lblDescription" destination="pXC-yj-rZX" id="gSJ-lm-91n"/>
+                                    <outlet property="lblAge" destination="niG-bf-4lQ" id="xKX-Um-Kv4"/>
+                                    <outlet property="lblDescription" destination="0hO-KO-DJt" id="39z-Oj-Q8F"/>
+                                    <outlet property="lblName" destination="pXC-yj-rZX" id="W91-H5-k8I"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
