--- a/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
+++ b/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
@@ -173,17 +173,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mwE-ST-aIf">
-                            <size key="itemSize" width="300" height="357"/>
+                            <size key="itemSize" width="300" height="500"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PeggleMasterCell" id="VTg-Gl-Doy" customClass="PeggleMasterCell" customModule="PeggleClone" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="357"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="484"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="WTy-PT-MNX">
-                                    <rect key="frame" x="0.0" y="0.0" width="300" height="357"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="484"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q4v-hT-Wkn">
@@ -193,26 +193,26 @@
                                                 <constraint firstAttribute="height" constant="150" id="qeV-QD-o2Q"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXC-yj-rZX">
-                                            <rect key="frame" x="30" y="210" width="41.5" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXC-yj-rZX">
+                                            <rect key="frame" x="30" y="210" width="41.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niG-bf-4lQ">
-                                            <rect key="frame" x="30" y="251" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="niG-bf-4lQ">
+                                            <rect key="frame" x="30" y="250.5" width="41.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hO-KO-DJt">
-                                            <rect key="frame" x="30" y="292" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hO-KO-DJt">
+                                            <rect key="frame" x="30" y="291" width="41.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GA-ld-XUF">
-                                            <rect key="frame" x="117.5" y="296" width="65" height="31"/>
+                                            <rect key="frame" x="117.5" y="423" width="65" height="31"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="filled" title="Select"/>
                                         </button>
@@ -224,22 +224,25 @@
                                         <constraint firstItem="Q4v-hT-Wkn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WTy-PT-MNX" secondAttribute="leading" constant="30" id="Cjv-KG-Yvv"/>
                                         <constraint firstItem="Q4v-hT-Wkn" firstAttribute="centerX" secondItem="6GA-ld-XUF" secondAttribute="centerX" id="Deo-Dg-O9Y"/>
                                         <constraint firstItem="0hO-KO-DJt" firstAttribute="top" secondItem="niG-bf-4lQ" secondAttribute="bottom" constant="20" id="Fn7-fT-FfJ"/>
+                                        <constraint firstItem="6GA-ld-XUF" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0hO-KO-DJt" secondAttribute="bottom" constant="10" id="GjM-JT-ZgD"/>
                                         <constraint firstItem="Q4v-hT-Wkn" firstAttribute="top" secondItem="WTy-PT-MNX" secondAttribute="top" constant="30" id="NSK-IB-Qw8"/>
                                         <constraint firstItem="Q4v-hT-Wkn" firstAttribute="leading" secondItem="pXC-yj-rZX" secondAttribute="leading" id="VzB-Hq-Avt"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="niG-bf-4lQ" secondAttribute="trailing" constant="30" id="WHm-xd-JBB"/>
                                         <constraint firstItem="niG-bf-4lQ" firstAttribute="leading" secondItem="WTy-PT-MNX" secondAttribute="leading" constant="30" id="edG-Ae-JRx"/>
                                         <constraint firstItem="Q4v-hT-Wkn" firstAttribute="centerX" secondItem="WTy-PT-MNX" secondAttribute="centerX" id="i7i-mc-MFH"/>
                                         <constraint firstItem="0hO-KO-DJt" firstAttribute="leading" secondItem="WTy-PT-MNX" secondAttribute="leading" constant="30" id="kjH-WF-Inn"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0hO-KO-DJt" secondAttribute="trailing" constant="30" id="ohf-bG-SVm"/>
                                         <constraint firstAttribute="bottom" secondItem="6GA-ld-XUF" secondAttribute="bottom" constant="30" id="xlm-sd-c33"/>
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pXC-yj-rZX" secondAttribute="trailing" constant="30" id="zfS-cA-cFG"/>
                                     </constraints>
                                 </collectionViewCellContentView>
-                                <size key="customSize" width="300" height="357"/>
+                                <size key="customSize" width="300" height="484"/>
                                 <connections>
                                     <outlet property="btnSelect" destination="6GA-ld-XUF" id="1Gj-kg-pQE"/>
                                     <outlet property="ivPicture" destination="Q4v-hT-Wkn" id="shn-rT-q7R"/>
-                                    <outlet property="lblAge" destination="niG-bf-4lQ" id="xKX-Um-Kv4"/>
                                     <outlet property="lblDescription" destination="0hO-KO-DJt" id="39z-Oj-Q8F"/>
                                     <outlet property="lblName" destination="pXC-yj-rZX" id="W91-H5-k8I"/>
+                                    <outlet property="lblTitle" destination="niG-bf-4lQ" id="xKX-Um-Kv4"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
