--- a/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
+++ b/PeggleClone/PeggleClone/Base.lproj/Main.storyboard
@@ -336,7 +336,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="810" height="100"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WUq-V5-lzR">
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="WUq-V5-lzR">
                                 <rect key="frame" x="0.0" y="0.0" width="610" height="40"/>
                             </stackView>
                             <scrollView autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" directionalLockEnabled="YES" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FGz-0M-mF9">
@@ -394,12 +394,12 @@
                             <constraint firstItem="FGz-0M-mF9" firstAttribute="top" secondItem="WUq-V5-lzR" secondAttribute="bottom" id="TlT-hU-wuA"/>
                             <constraint firstItem="FGz-0M-mF9" firstAttribute="bottom" secondItem="C3i-8F-UqJ" secondAttribute="bottom" id="VAX-eh-d6N"/>
                             <constraint firstItem="FGz-0M-mF9" firstAttribute="leading" secondItem="ArY-fh-EaM" secondAttribute="leading" id="VZU-a1-Pxj"/>
+                            <constraint firstItem="WUq-V5-lzR" firstAttribute="trailing" secondItem="FGz-0M-mF9" secondAttribute="trailing" id="X6M-hg-Fd3"/>
                             <constraint firstItem="FGz-0M-mF9" firstAttribute="top" secondItem="C3i-8F-UqJ" secondAttribute="top" constant="40" id="clI-wd-ce1"/>
                             <constraint firstAttribute="bottom" secondItem="Bxw-1n-r9x" secondAttribute="bottom" id="eGp-3X-orE"/>
                             <constraint firstItem="Bxw-1n-r9x" firstAttribute="trailing" secondItem="hgW-JH-47I" secondAttribute="leading" id="kA0-Y6-Okt"/>
                             <constraint firstItem="FGz-0M-mF9" firstAttribute="trailing" secondItem="Bxw-1n-r9x" secondAttribute="leading" id="mpb-QO-9bk"/>
                             <constraint firstItem="hgW-JH-47I" firstAttribute="top" secondItem="C3i-8F-UqJ" secondAttribute="top" id="nYy-X2-KF8"/>
-                            <constraint firstItem="Bxw-1n-r9x" firstAttribute="leading" secondItem="WUq-V5-lzR" secondAttribute="trailing" id="qYw-dA-oFA"/>
                             <constraint firstItem="WUq-V5-lzR" firstAttribute="leading" secondItem="ArY-fh-EaM" secondAttribute="leading" id="seI-9j-dQO"/>
                         </constraints>
                     </view>
